--- a/services/helios.identity/helios.identity.data/Jenkinsfile
+++ b/services/helios.identity/helios.identity.data/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
 
         stage('Database Migrations Dev') {
             steps {
-                dir("${SOLUTION_DIR}") {
+                dir(SOLUTION_DIR) {
                     updateDBFromMigration(PROJECT_NAME, CONTEXT_NAME, DOTNET_VERSION, EF_VERSION, 'Development')
                 }
             }
@@ -40,7 +40,7 @@ pipeline {
 
         stage('Database Migrations Prod') {
             steps {
-                dir("${SOLUTION_DIR}") {
+                dir(SOLUTION_DIR) {
                     updateDBFromMigration(PROJECT_NAME, CONTEXT_NAME, DOTNET_VERSION, EF_VERSION, 'Production')
                 }
             }
