--- a/utilities/Jenkinsfile
+++ b/utilities/Jenkinsfile
@@ -3,19 +3,31 @@
 pipeline {
     agent any
 
+    parameters {
+        booleanParam(
+            name: 'Force',
+            defaultValue: false,
+            description: 'Runs even if there are no changes'
+        )
+    }
+
+    environment {
+        USERNAME = credentials('vps-username')
+        DOMAIN = credentials('vps-domain')
+    }
+
     stages {
         stage('Determine Changes and run pipelines') {
             steps {
                 checkout scm
 
                 script {
-                    def pipelines = [
-						'helios.services.identity': 'services/helios.identity',
-						'helios.utilities': 'utilities'
+                    def services = [
+                        'helios.utilities.sdk.js': 'services/utilities',
                     ]
 
                     def toTrigger = []
-                    pipelines.each { service, path ->
+                    services.each { service, path ->
                         if (params.FORCE_RUN || checkMicroservice(path)) {
                             echo "Changes detected in ${service}, will trigger pipelines."
                             toTrigger << service // Add to the list
@@ -33,6 +45,9 @@ pipeline {
                     toTrigger.each { service -> 
                         echo "Triggering ${service}..."
                         build job: service,
+                                parameters: [
+                                    booleanParam(name: 'Force', value: params.All)
+                                ],
                                 wait: false // set false for async
                         echo "${service} finished."
                     }
