Added in new pipeline for the identity package

--- a/services/helios.identity/Jenkinsfile
+++ b/services/helios.identity/Jenkinsfile
@@ -32,7 +32,8 @@ pipeline {
                     def services = [
                         'helios.services.identity.api': 'services/helios.identity/helios.identity.api',
                         'helios.services.identity.client': 'services/helios.identity/helios.identity.client',
-                        'helios.services.identity.data': 'services/helios.identity/helios.identity.data'
+                        'helios.services.identity.data': 'services/helios.identity/helios.identity.data',
+						'helios.services.identity.sdk': 'services/helios.identity/helios.identity.sdk/js'
                     ]
 
                     def toTrigger = []
