--- a/services/helios.identity/Jenkinsfile
+++ b/services/helios.identity/Jenkinsfile
@@ -1,70 +1,10 @@
 @Library('pipeline-lib') _
 
-pipeline {
-    agent any
-
-    parameters {
-        booleanParam(
-            name: 'All',
-            defaultValue: false,
-            description: 'Run all even if there are no changes'
-        )
-
-		booleanParam(
-			name: 'Dev',
-			defaultValue: false,
-			description: 'Run dev even if there are no changes'
-		)
-
-		booleanParam(
-			name: 'Prod',
-			defaultValue: false,
-			description: 'Run prod even if there are no changes'
-		)
-    }
-
-    stages {
-        stage('Determine Changes and run pipelines') {
-            steps {
-                checkout scm
-
-                script {
-                    def services = [
-                        'helios.services.identity.api': 'services/helios.identity/helios.identity.api',
-                        'helios.services.identity.client': 'services/helios.identity/helios.identity.client',
-                        'helios.services.identity.data': 'services/helios.identity/helios.identity.data',
-						'helios.services.identity.sdk': 'services/helios.identity/helios.identity.sdk/js'
-                    ]
-
-                    def toTrigger = []
-                    services.each { service, path ->
-                        if (params.FORCE_RUN || checkMicroservice(path)) {
-                            echo "Changes detected in ${service}, will trigger pipelines."
-                            toTrigger << service // Add to the list
-                        } else {
-                            echo "No changes in ${service}, skipping."
-                        }
-                    }
-
-                    if (toTrigger.isEmpty()) {
-                        echo "No services changed. Nothing to trigger."
-                    }
-					
-					// TODO: ENSURE THIS PIPELINE DOESNT WAIT FOR THESE JOBS TO FINISH
-
-                    toTrigger.each { service -> 
-                        echo "Triggering ${service}..."
-                        build job: service,
-                                parameters: [
-                                    booleanParam(name: 'All', value: params.All),
-									booleanParam(name: 'Dev', value: params.Dev),
-									booleanParam(name: 'Prod', value: params.Prod)
-                                ],
-                                wait: false // set false for async
-                        echo "${service} finished."
-                    }
-                }
-            }
-        }
-    }
-}
+multiServicePipeline(
+    pipelines: [
+        'helios.services.identity.api': 'services/helios.identity/helios.identity.api',
+        'helios.services.identity.client': 'services/helios.identity/helios.identity.client',
+        'helios.services.identity.data': 'services/helios.identity/helios.identity.data',
+        'helios.services.identity.sdk': 'services/helios.identity/helios.identity.sdk/js'
+    ]
+)
