Simplified more master pipelines

--- a/utilities/Jenkinsfile
+++ b/utilities/Jenkinsfile
@@ -1,58 +1,7 @@
 @Library('pipeline-lib') _
 
-pipeline {
-    agent any
-
-    parameters {
-        booleanParam(
-            name: 'Force',
-            defaultValue: false,
-            description: 'Runs even if there are no changes'
-        )
-    }
-
-    environment {
-        USERNAME = credentials('vps-username')
-        DOMAIN = credentials('vps-domain')
-    }
-
-    stages {
-        stage('Determine Changes and run pipelines') {
-            steps {
-                checkout scm
-
-                script {
-                    def services = [
-                        'helios.utilities.sdk.js': 'services/utilities',
-                    ]
-
-                    def toTrigger = []
-                    services.each { service, path ->
-                        if (params.FORCE_RUN || checkMicroservice(path)) {
-                            echo "Changes detected in ${service}, will trigger pipelines."
-                            toTrigger << service // Add to the list
-                        } else {
-                            echo "No changes in ${service}, skipping."
-                        }
-                    }
-
-                    if (toTrigger.isEmpty()) {
-                        echo "No services changed. Nothing to trigger."
-                    }
-					
-					// TODO: ENSURE THIS PIPELINE DOESNT WAIT FOR THESE JOBS TO FINISH
-
-                    toTrigger.each { service -> 
-                        echo "Triggering ${service}..."
-                        build job: service,
-                                parameters: [
-                                    booleanParam(name: 'Force', value: params.All)
-                                ],
-                                wait: false // set false for async
-                        echo "${service} finished."
-                    }
-                }
-            }
-        }
-    }
-}
+multiServicePipeline(
+    pipelines: [
+        'helios.utilities.sdk.js': 'services/utilities',
+    ]
+)
